# quickforge

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_LANGUAGE.md  LICENSE  MIGRATION_PLAN.md  README.md  SECURITY.md  agents.md  app_spec.txt  claude-progress.txt  deploy.bat  dev-fastcode.bat  dev-quickforge.bat  eslint.config.js  feature_list.json  index.html  init.ps1  init.sh  package-lock.json  package.json  quickforge-icon-grayblack-preview.html  quickforge-icon-preview.html  run-codex-init.sh  run-codex-loop.sh  start-fastcode.bat  start-quickforge.bat  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
desktop/: electron-builder.config.cjs  electron-main.mjs
docs/: README.md  cold-start-baseline.jsonl  cold-start-baseline.md  mcp-servers.example.json  user-guide.en-US.md  user-guide.zh-CN.md
public/: manifest.webmanifest  sw.js
scripts/: measure-cold-start.ps1  normalize-tui-log.ps1  prepare-offline-package.cjs  prepare-patch-release.cjs  prepare-runtime-package.cjs  prune-offline-package.cjs  test-normalize-tui-log-fixtures.ps1  test-normalize-tui-log.ps1
server/: agent-manager.mjs  agent-profile-files.mjs  agent-profiles.mjs  ai-http-logger.mjs  approval-store.mjs  auto-compaction.mjs  context-usage.mjs  conversation-compaction.mjs  custom-commands.mjs  frontmatter.mjs  index.mjs  lan-access-store.mjs  message-converters.mjs  project-config.mjs  public-api.mjs  reasoning-cache.mjs  restart-supervisor.mjs  session-utils.mjs  share-store.mjs  (+6 more)
(+279 files in other folders)
