[package]
name = "fastcode"
version = "0.1.0"
edition = "2024"
description = "FastCode: Rust-native TUI coding agent"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
